objects/XREF_Opportunity_Family__c.object
<CustomObject>
    <description>CRM-13837
Re parenting of Notes &amp; Attachments across all Objects</description>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Id__c</fullName>
        <externalId>true</externalId>
        <label>New Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Processed_Date_Time__c</fullName>
        <label>Processed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>XREF Opportunity Family</label>
    <nameField>
        <displayFormat>XO-{0000}</displayFormat>
        <label>XREF Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XREF Opportunity Family</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>